<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/labelFragment"
            android:icon="@drawable/baseline_new_label_24"
            android:title="@string/menu_label" />
        <item
            android:id="@+id/photoFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_photo" />
        <item
            android:id="@+id/galleryFragment"
            android:icon="@drawable/baseline_image_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/logoutFragment"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>